agrego dtos de hecho y coleccion completo para front + mappers