@@ -1,8 +1,9 @@
 package ar.edu.utn.frba.server.servicioAgregador.controllers;
 
-import ar.edu.utn.frba.server.contratos.enums.TipoFuente;
 import ar.edu.utn.frba.server.servicioAgregador.domain.*;
 import ar.edu.utn.frba.server.servicioAgregador.dtos.*;
+import ar.edu.utn.frba.server.servicioAgregador.mappers.ColeccionFrontMapper;
+import ar.edu.utn.frba.server.servicioAgregador.mappers.HechoFrontMapper;
 import ar.edu.utn.frba.server.servicioAgregador.repositories.IAlgoritmoConsensoRepository;
 import ar.edu.utn.frba.server.servicioAgregador.repositories.IColeccionRepository;
 import ar.edu.utn.frba.server.servicioAgregador.services.*;
@@ -14,7 +15,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/colecciones")
@@ -28,30 +28,40 @@ public class ColeccionController {
     private final IAlgoritmoConsensoRepository algoritmoRepo;
     private final IColeccionRepository coleccionRepo;
 
-    // --- ENDPOINT PARA LANDING PAGE (GET /api/colecciones/ultimas) ---
+    /* =====================================================
+       ===============  LANDING PAGE  =======================
+       ===================================================== */
+
     @GetMapping("/ultimas")
-    public ResponseEntity<List<ColeccionOutputBD>> listarUltimas() {
-        return ResponseEntity.ok(coleccionService.listarUltimas());
+    public ResponseEntity<List<ColeccionFrontDto>> listarUltimas() {
+        return ResponseEntity.ok(
+                coleccionService.listarUltimas()
+                        .stream()
+                        .map(ColeccionFrontMapper::toDto)
+                        .toList()
+        );
     }
 
-    // --- ENDPOINTS DE ALGORITMOS DE CONSENSO ---
+    /* =====================================================
+       =========   ALGORITMOS DE CONSENSO   ================
+       ===================================================== */
 
-    // 1. Listar algoritmos para el select del modal
     @GetMapping("/algoritmos")
     public ResponseEntity<List<AlgoritmoConsenso>> listarAlgoritmosDisponibles() {
         return ResponseEntity.ok(algoritmoRepo.findAll());
     }
 
-    // 2. Asociar algoritmo a una colección
     @PutMapping("/{id}/asociar-algoritmo")
-    public ResponseEntity<?> asociarAlgoritmo(@PathVariable Long id, @RequestParam(required = false) Long algoritmoId) {
+    public ResponseEntity<?> asociarAlgoritmo(
+            @PathVariable Long id,
+            @RequestParam(required = false) Long algoritmoId) {
         try {
             Coleccion c = coleccionRepo.findById(id)
-                .orElseThrow(() -> new NoSuchElementException("Colección no encontrada"));
+                    .orElseThrow(() -> new NoSuchElementException("Colección no encontrada"));
 
             if (algoritmoId != null) {
                 AlgoritmoConsenso algo = algoritmoRepo.findById(algoritmoId)
-                    .orElseThrow(() -> new NoSuchElementException("Algoritmo no encontrado"));
+                        .orElseThrow(() -> new NoSuchElementException("Algoritmo no encontrado"));
                 c.setAlgoritmoConsensoEntidad(algo);
             } else {
                 c.setAlgoritmoConsensoEntidad(null);
@@ -59,52 +69,55 @@ public class ColeccionController {
 
             coleccionRepo.save(c);
             return ResponseEntity.ok().build();
-        } catch (NoSuchElementException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(e.getMessage());
+
         } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(e.getMessage());
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(e.getMessage());
         }
     }
 
-    // --- OTROS ENDPOINTS ---
+
+
+    /* =====================================================
+       ================   CRUD PRINCIPAL   ==================
+       ===================================================== */
 
     @GetMapping
-    public ResponseEntity<List<ColeccionOutputDto>> listar() {
+    public ResponseEntity<List<ColeccionFrontDto>> listar() {
         var out = coleccionService.findAll().stream()
-            .map(ColeccionOutputDto::fromModel)
-            .collect(Collectors.toList());
+                .map(ColeccionFrontMapper::toDto)
+                .toList();
         return ResponseEntity.ok(out);
     }
 
-    // Funcionalidad de buscar por título
-    // Endpoint: GET /api/colecciones/hechos?tituloColeccion=...
-    // Nota: Asegúrate de agregar 'obtenerHechosPorTituloColeccion' a tu interfaz IColeccionService si no existe.
-    @GetMapping("/hechos")
-    public ResponseEntity<List<HechosOutputDto>> obtenerHechosPorTituloColeccion(
-        @RequestParam("tituloColeccion") String tituloColeccion
-    ) {
-        /* List<HechosOutputDto> hechos = coleccionService.obtenerHechosPorTituloColeccion(tituloColeccion);
-        return ResponseEntity.ok(hechos);
-        */
-        return ResponseEntity.ok(List.of()); // Placeholder hasta confirmar servicio
-    }
 
     @PostMapping
-    public ResponseEntity<ColeccionOutputBD> crear(@Valid @RequestBody ColeccionInputBD dto) {
-        ColeccionOutputBD out = coleccionService.crear(dto);
-        return ResponseEntity.status(HttpStatus.CREATED).body(out);
+    public ResponseEntity<ColeccionFrontDto> crear(
+            @Valid @RequestBody ColeccionInputBD dto) {
+
+        var creada = coleccionService.crear(dto);
+
+        return ResponseEntity.status(HttpStatus.CREATED)
+                .body(ColeccionFrontMapper.toDto(creada));
     }
+
 
     @GetMapping("/{id}")
-    public ResponseEntity<ColeccionOutputBD> listarUna(@PathVariable Long id) {
-        return ResponseEntity.ok(coleccionService.listar(id));
+    public ResponseEntity<ColeccionFrontDto> listarUna(@PathVariable Long id) {
+        var c = coleccionService.listar(id);
+        return ResponseEntity.ok(ColeccionFrontMapper.toDto(c));
     }
 
+
     @PatchMapping("/editar/{id}")
-    public ResponseEntity<ColeccionOutputBD> editar(@PathVariable Long id, @RequestBody ColeccionUpdateBD in) {
-        ColeccionOutputBD out = coleccionService.editar(id, in);
-        return ResponseEntity.ok(out);
+    public ResponseEntity<ColeccionFrontDto> editar(
+            @PathVariable Long id,
+            @RequestBody ColeccionUpdateBD in) {
+
+        var updated = coleccionService.editar(id, in);
+        return ResponseEntity.ok(ColeccionFrontMapper.toDto(updated));
     }
+
 
     @DeleteMapping("/eliminar/{id}")
     public ResponseEntity<Void> eliminar(@PathVariable Long id) {
@@ -112,78 +125,93 @@ public class ColeccionController {
         return ResponseEntity.noContent().build();
     }
 
+
+
+    /* =====================================================
+       ============   HECHOS DE COLECCIÓN   =================
+       ===================================================== */
+
     @GetMapping("/{id}/hechos")
-    public List<HechosOutputDto> obtenerHechosDeColeccion(@PathVariable Long id) {
-        return coleccionService.obtenerHechosPorColeccion(id).stream()
-            .map(HechosOutputDto::fromModel)
-            .toList();
+    public ResponseEntity<List<HechoFrontDto>> obtenerHechosDeColeccion(@PathVariable Long id) {
+
+        var hechos = coleccionService.obtenerHechosPorColeccion(id)
+                .stream()
+                .map(HechoFrontMapper::toDto)
+                .toList();
+
+        return ResponseEntity.ok(hechos);
     }
+
 
     @GetMapping("/{id}/hechos/navegacion")
-    public ResponseEntity<?> navegarHechos(@PathVariable Long id, @RequestParam(defaultValue = "irrestricta") String modo) {
-        var hechos = coleccionService.navegarHechos(id, modo);
-        var dtos = hechos.stream().map(HechosOutputDto::fromModel).toList();
-        return ResponseEntity.ok(dtos);
+    public ResponseEntity<List<HechoFrontDto>> navegarHechos(
+            @PathVariable Long id,
+            @RequestParam(defaultValue = "irrestricta") String modo) {
+
+        var hechos = coleccionService.navegarHechos(id, modo)
+                .stream()
+                .map(HechoFrontMapper::toDto)
+                .toList();
+
+        return ResponseEntity.ok(hechos);
     }
 
-    @PostMapping("/crearDesdeCSV")
-    public ResponseEntity<ColeccionOutputDto> crearDesdeCSV(@RequestParam String path) {
-        var c = coleccionService.crearColeccionDesdeFuentes("COLECCION CSV", path);
-        return ResponseEntity.ok(ColeccionOutputDto.fromModel(c));
-    }
 
     @PatchMapping("/{coleccionId}/hechos/{hechoId}")
-    public ResponseEntity<?> agregarHechoAColeccion(@PathVariable Long coleccionId, @PathVariable Long hechoId) {
+    public ResponseEntity<ColeccionFrontDto> agregarHechoAColeccion(
+            @PathVariable Long coleccionId,
+            @PathVariable Long hechoId) {
+
         try {
-            ColeccionOutputDto resultado = coleccionService.agregarHechoAColeccion(coleccionId, hechoId);
-            return ResponseEntity.ok(resultado);
+            var resultado = coleccionService.agregarHechoAColeccion(coleccionId, hechoId);
+            return ResponseEntity.ok(ColeccionFrontMapper.toDto(resultado));
+
         } catch (NoSuchElementException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(e.getMessage());
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(null);
+
         } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error interno: " + e.getMessage());
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(null);
         }
     }
 
-    // Endpoints de Solicitudes
+
+
+    /* =====================================================
+       =================  SOLICITUDES  ======================
+       ===================================================== */
+
     @PostMapping("/solicitudes/{id}/aprobar")
     public ResponseEntity<Void> aprobarSolicitud(@PathVariable Long id) {
-        try {
-            solicitudService.aceptarSolicitud(id);
-            return ResponseEntity.ok().build();
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-        }
+        solicitudService.aceptarSolicitud(id);
+        return ResponseEntity.ok().build();
     }
 
     @PostMapping("/solicitudes/{id}/denegar")
     public ResponseEntity<Void> denegarSolicitud(@PathVariable Long id) {
-        try {
-            solicitudService.rechazarSolicitud(id);
-            return ResponseEntity.ok().build();
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-        }
+        solicitudService.rechazarSolicitud(id);
+        return ResponseEntity.ok().build();
     }
 
-    @PutMapping("/{id}/algoritmo")
-    public ResponseEntity<Void> setearAlgoritmoPorNombre(@PathVariable Long id, @RequestParam String tipo) {
-        try {
-            var t = ar.edu.utn.frba.server.contratos.enums.TipoAlgoritmoConsenso.fromCodigo(tipo);
-            // ... lógica simplificada ...
-            return ResponseEntity.ok().build();
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.badRequest().build();
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-        }
+
+
+    /* =====================================================
+       =================  CSV + CONSENSO  ==================
+       ===================================================== */
+
+    @PostMapping("/crearDesdeCSV")
+    public ResponseEntity<ColeccionFrontDto> crearDesdeCSV(@RequestParam String path) {
+        var c = coleccionService.crearColeccionDesdeFuentes("COLECCION CSV", path);
+        return ResponseEntity.ok(ColeccionFrontMapper.toDto(c));
     }
 
     @PatchMapping("/{coleccionId}/hechos/{hechoId}/consensuar")
-    public ResponseEntity<HechosOutputDto> consensuarHecho(@PathVariable Long coleccionId, @PathVariable Long hechoId) {
-        try {
-            return ResponseEntity.ok(coleccionService.consensuarHecho(coleccionId, hechoId));
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-        }
+    public ResponseEntity<HechoFrontDto> consensuarHecho(
+            @PathVariable Long coleccionId,
+            @PathVariable Long hechoId) {
+
+        var out = coleccionService.consensuarHecho(coleccionId, hechoId);
+        return ResponseEntity.ok(HechoFrontMapper.toDto(out));
     }
 }
